# wedding_planner

./: CMakeLists.txt  Procfile  db.sqlite3  requirements.txt
ecom_project/: settings.py  urls.py
static/css/: admin_styles.css
static/js/: admin.js  rscripts.js
staticfiles/css/: styles.css
staticfiles/js/: face-api.js  index.js
store/: models.py  pipeline.py  urls.py  views.py
store/migrations/: 0001_initial.py  0002_alter_user_phone.py  0003_package.py  0004_occassion.py  0005_event_eventimage.py  0006_photographer_photographerimage.py  0007_remove_photographer_ratings_and_more.py  0008_rename_contactno_photographer_contact_number_and_more.py  0009_stylist_stylistimage.py  0010_passwordreset.py  0011_delete_passwordreset.py  0012_religion_remove_eventimage_event_delete_event_and_more.py  0013_passwordreset.py  0014_rename_user_passwordreset_user_email.py  (+20 more)
templates/: booking.html  cart.html  caters.html  caters_customers.html  caters_package.html  checkout.html  checkout_success.html  customer_photographer_list.html  dessert_detail.html  dessert_details.html  dress_view.html  event_customer.html  event_package.html  headercustomer.html  index.html  login.html  main_course_detail.html  main_course_item_detail.html  package_detail.html  package_view.html  password_reset_confirm.html  password_reset_form.html  photographer_detail.html  photographer_details.html  profile.html  register.html  saved_items.html  starter_detail.html  starter_item_detail.html  stylist_customer.html  stylist_package.html  try_on.html  try_on_result.html  view_order.html  wedding.csv
(+43 files in other folders)
